[package]
name = "hogfold"
version = "0.1.0"
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
license = "MIT"
edition = "2018"

[dependencies]
bytes = "0.4.12"
env_logger = "0.6.1"
failure = "0.1.5"
hashbrown = "0.2.0"
log = "0.4.6"
mqtt-codec = { git = "https://github.com/fafhrd91/mqtt-codec.git" }
string = "0.1.3"
tokio = { version = "0.1.18" }

[profile.test]
debug = false

[profile.dev]
debug = false
